# ed_tasks

./: main.py  pyproject.toml
src/first_week/1base_python/cache_decorator/: cache_decorator.py
src/first_week/1base_python/class_attr/: class_attr.py
src/first_week/1base_python/singleton/: singleton_decorator.py  singleton_for_import.py  singleton_import.py  singleton_metaclass.py  singleton_method_new.py
src/first_week/2data structures/search_in_sorted_array/: search_in_sorter_array.py
src/first_week/3async/async_http/: async_http.py  results.json
src/first_week/3async/async_http_advance/: async_generator_test.py  async_http_advance.py  async_http_advance_past.py  results.json  urls.txt
src/first_week/4multithreading/: perfomance_test.py  performance_results.csv  performance_results.json
src/first_week/6wsgi_asgi/: app.py  wsgi.py
src/second_week/database/1db_queue/: db_queue.py
src/second_week/database/2distributed_lock/: distributed_lock.py  distributed_lock_thread.py  distributed_lock_thread_v2.py  distributed_lock_unix.py
src/second_week/database/3redis_queue/: redis_queue.py
src/second_week/database/4rate_limiter/: rate_limiter.py  rate_limiter_counter.py  rate_limiter_ordered_set.py
