[project]
name = "ed-tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.16",
    "django>=5.2",
    "gunicorn>=23.0.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "uvicorn>=0.34.0",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
